--- a/client/index.html
+++ b/client/index.html
@@ -3,8 +3,8 @@
 
   <head>
     <script src="https://code.angularjs.org/1.5.5/angular.js"></script>
-    <link rel="stylesheet" href="style.css" />
-    <script src="script.js"></script>
+    <!-- <link rel="stylesheet" href="style.css" /> -->
+    <script src="mainCtrl.js"></script>
   </head>
 
   <body ng-controller="MainController">
