--- a/client/index.html
+++ b/client/index.html
@@ -1,20 +1,23 @@
 <!DOCTYPE html>
-<html ng-app='site'>
+<html ng-app='interloper'>
 
   <head>
-    <script src="https://code.angularjs.org/1.5.5/angular.js"></script>
-    <!-- <link rel="stylesheet" href="style.css" /> -->
-    <script src="mainCtrl.js"></script>
+    <link rel="stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.css"/>
+    <script src="lib/jquery-3.0.0.min.js"></script>
+    <!-- <link rel="stylesheet" href="style.css"/> -->
   </head>
 
-  <body ng-controller="MainController">
-    <h1>{{message}}</h1>
-    <div>{{error}}</div>
-    <div>What's my name: {{user.name}}</div>
-    <div>Where I am: {{user.location}}</div>
-    <div>
-      <img ng-src="{{user.avatar_url}}" title="{{user.name}}">
-    </div>
+  <body>
+    <div class=" navbar-right">
+    <div class="container-fluid">
+      <ul class="nav navbar-nav">
+        <li><a href="/">Home</a></li>
+        <li><a href="/blog">Blog</a></li>
+        <li><a href="/portfolio">Portfolio</a></li>
+        <li><a href="/about">About</a></li>
+    </ul>
+  </div>
+</div>
   </body>
 
 </html>
