add style images and structure

--- a/client/index.html
+++ b/client/index.html
@@ -1,23 +1,54 @@
 <!DOCTYPE html>
-<html ng-app='interloper'>
-
+<html>
   <head>
-    <link rel="stylesheet" href="lib/bootstrap-3.3.6-dist/css/bootstrap.css"/>
+    <title>Richard Boothe | Developer</title>
+    <link rel="stylesheet" href="./style/normalize.css" />
+    <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="./style/main.css" />
+    <link rel="stylesheet" href="./style/responsive.css" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="lib/jquery-3.0.0.min.js"></script>
-    <!-- <link rel="stylesheet" href="style.css"/> -->
   </head>
-
-  <body>
-    <div class=" navbar-right">
-    <div class="container-fluid">
-      <ul class="nav navbar-nav">
-        <li><a href="/">Home</a></li>
-        <li><a href="/blog">Blog</a></li>
-        <li><a href="/portfolio">Portfolio</a></li>
-        <li><a href="/about">About</a></li>
-    </ul>
-  </div>
-</div>
+  <body> 
+    <header>
+      <a href="index.html" id="logo">
+        <h1>RICHARD BOOTHE</h1>
+        <h4>DEVELOPER</h4>
+      </a>
+      <nav>
+        <ul>
+          <li id='home'><a href="/" class="selected">Home</a></li>
+          <li><a href="toyProblems.html">Toy Problems</a></li>
+          <li><a href="blog.html">Blog</a></li>
+          <li><a href="portfolio.html">Portfolio</a></li>
+          <li><a href="about.html">About</a></li>
+        </ul>
+      </nav>
+    </header>
+    <div id="wrapper">
+      <section>
+        <ul id="options">
+          <li>
+            <a href="toyProblems.html">
+              <img src="img/toyProblems.jpg" alt="toy problems">
+            </a>  
+          </li>
+          <li>
+            <a href="blog.html">
+              <img src="img/blog.jpg" alt="blog">
+            </a>  
+          <li>
+            <a href="portfolio.html">
+              <img src="img/portfolio.jpg" alt="portfolio">
+            </a>  
+          </li>
+        </ul>
+      </section>
+    </div>
+    <footer class="main-footer">
+      <a href="http://twitter.com/richardjboothe"><img src="img/twitter2.png" alt="Twitter Logo" class="social-icon"></a>
+      <a href="http://facebook.com/richardjboothe"><img src="img/facebook2.png" alt="Facebook Logo" class="social-icon"></a>
+      <p>&copy; 2016 Richard Boothe</p>
+    </footer>
   </body>
-
 </html>
