tweak style and add image heading

--- a/client/index.html
+++ b/client/index.html
@@ -29,15 +29,18 @@
       <section>
         <ul id="options">
           <li>
+            <p class="image-title">Toy Problems</p>
             <a href="toyProblems.html">
               <img src="img/toyProblems.jpg" alt="toy problems">
             </a>  
           </li>
           <li>
+            <p class="image-title">Blog</p>
             <a href="blog.html">
               <img src="img/blog.jpg" alt="blog">
             </a>  
           <li>
+            <p class="image-title">Portfolio</p>
             <a href="portfolio.html">
               <img src="img/portfolio.jpg" alt="portfolio">
             </a>  
