add node_modules and database to .gitignore and create package.json file

--- a/client/index.html
+++ b/client/index.html
@@ -59,6 +59,13 @@
           $(this).fadeOut('slow');
         })
       });
+      $.ajax({
+        url: "http://otter.topsy.com/urlinfo.js?url=http://www.nytimes.com",
+        dataType: 'jsonp',
+        success: function(results){
+        console.log(results);
+        } 
+      });
     </script>
   </body>
 </html>
