--- a/client/index.html
+++ b/client/index.html
@@ -10,7 +10,6 @@
     <script src="lib/jquery-3.0.0.min.js"></script>
   </head>
   <body> 
-
     <header>
       <a href="index.html" id="logo">
         <h1>RICHARD BOOTHE</h1>
@@ -49,23 +48,11 @@
       </section>
     </div>
     <footer class="main-footer">
-      <a href="http://twitter.com/richardjboothe"><img src="img/twitter2.png" alt="Twitter Logo" class="social-icon"></a>
-      <a href="http://facebook.com/richardjboothe"><img src="img/facebook2.png" alt="Facebook Logo" class="social-icon"></a>
+      <a href="http://twitter.com/richardjboothe" target="_blank"><img src="img/twitter2.png" alt="Twitter Logo" class="social-icon" ></a>
+      <a href="http://github.com/richardjboothe" target="_blank"><img src="img/github2.png" alt="Github Logo" class="social-icon" ></a>
+      <a href="http://facebook.com/richardjboothe" target="_blank"><img src="img/facebook2.png" alt="Facebook Logo" class="social-icon" ></a>
       <p>&copy; 2016 Richard Boothe</p>
     </footer>
-        <script type="text/javascript">
-      $('.image-title').mouseenter(function(){
-        $(this).toggle(function(){
-          $(this).fadeOut('slow');
-        })
-      });
-      $.ajax({
-        url: "http://otter.topsy.com/urlinfo.js?url=http://www.nytimes.com",
-        dataType: 'jsonp',
-        success: function(results){
-        console.log(results);
-        } 
-      });
-    </script>
+       
   </body>
 </html>
