--- a/client/pages/blog.html
+++ b/client/pages/blog.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style/main.css" />
     <link rel="stylesheet" href="../style/responsive.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="lib/jquery-3.0.0.min.js"></script>
+    <script src="./../lib/jquery-3.0.0.min.js"></script>
   </head>
   <body> 
     <header>
