--- a/client/pages/toyProblems.html
+++ b/client/pages/toyProblems.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="../style/main.css" />
     <link rel="stylesheet" href="../style/responsive.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="lib/jquery-3.0.0.min.js"></script>
+    <script src="./../lib/jquery-3.0.0.min.js"></script>
   </head>
   <body> 
     <header>
@@ -25,27 +25,7 @@
       </nav>
     </header>
     <div id="wrapper">
-     <!--  <section>
-        <ul id="options">
-          <li>
-            <p class="image-title">Toy Problems</p>
-            <a href="toyProblems.html">
-              <img src="img/toyProblems.jpg" alt="toy problems">
-            </a>  
-          </li>
-          <li>
-            <p class="image-title">Blog</p>
-            <a href="blog.html">
-              <img src="img/blog.jpg" alt="blog">
-            </a>  
-          <li>
-            <p class="image-title">Portfolio</p>
-            <a href="portfolio.html">
-              <img src="img/portfolio.jpg" alt="portfolio">
-            </a>  
-          </li>
-        </ul>
-      </section> -->
+
     </div>
     <footer class="main-footer">
       <a href="http://twitter.com/richardjboothe"><img src="../img/twitter2.png" alt="Twitter Logo" class="social-icon"></a>
