routes work FINALLY

--- a/client/index.html
+++ b/client/index.html
@@ -11,16 +11,16 @@
   </head>
   <body> 
     <header>
-      <a href="index.html" id="logo">
+      <a href="/" id="logo">
         <h1>RICHARD BOOTHE</h1>
         <h4>DEVELOPER</h4>
       </a>
       <nav>
         <ul>
-          <li><a href="./index.html" class="selected">Home</a></li>
-          <li><a href="./pages/toyProblems.html">Toy Problems</a></li>
-          <li><a href="./pages/blog.html">Blog</a></li>
-          <li><a href="./pages/portfolio.html">Portfolio</a></li>
+          <li><a href="/" class="selected">Home</a></li>
+          <li><a href="/toyProblems">Toy Problems</a></li>
+          <li><a href="/blog">Blog</a></li>
+          <li><a href="/portfolio">Portfolio</a></li>
         </ul>
       </nav>
     </header>
@@ -29,18 +29,18 @@
         <ul id="options">
           <li>
             <p class="image-title">Toy Problems</p>
-            <a href="./pages/toyProblems.html">
+            <a href="/toyProblems">
               <img src="img/toyProblems.jpg" alt="toy problems">
             </a>  
           </li>
           <li>
             <p class="image-title">Blog</p>
-            <a href="./pages/blog.html">
+            <a href="/blog">
               <img src="img/blog.jpg" alt="blog">
             </a>  
           <li>
             <p class="image-title">Portfolio</p>
-            <a href="./pages/portfolio.html">
+            <a href="/portfolio">
               <img src="img/portfolio.jpg" alt="portfolio">
             </a>  
           </li>
