--- a/client/pages/blog.html
+++ b/client/pages/blog.html
@@ -11,16 +11,16 @@
   </head>
   <body> 
     <header>
-      <a href="../index.html" id="logo">
+      <a href="index" id="logo">
         <h1>RICHARD BOOTHE</h1>
         <h4>DEVELOPER</h4>
       </a>
       <nav>
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="./toyProblems.html">Toy Problems</a></li>
-          <li><a href="./blog.html" class="selected">Blog</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="toyProblems">Toy Problems</a></li>
+          <li><a href="blog" class="selected">Blog</a></li>
+          <li><a href="portfolio">Portfolio</a></li>
         </ul>
       </nav>
     </header>
