--- a/client/pages/portfolio.html
+++ b/client/pages/portfolio.html
@@ -17,35 +17,14 @@
       </a>
       <nav>
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="./toyProblems.html">Toy Problems</a></li>
-          <li><a href="./blog.html">Blog</a></li>
-          <li><a href="./portfolio.html" class="selected">Portfolio</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="toyProblems">Toy Problems</a></li>
+          <li><a href="blog">Blog</a></li>
+          <li><a href="portfolio" class="selected">Portfolio</a></li>
         </ul>
       </nav>
     </header>
     <div id="wrapper">
-<!--       <section>
-        <ul id="options">
-          <li>
-            <p class="image-title">Toy Problems</p>
-            <a href="toyProblems.html">
-              <img src="img/toyProblems.jpg" alt="toy problems">
-            </a>  
-          </li>
-          <li>
-            <p class="image-title">Blog</p>
-            <a href="blog.html">
-              <img src="img/blog.jpg" alt="blog">
-            </a>  
-          <li>
-            <p class="image-title">Portfolio</p>
-            <a href="portfolio.html">
-              <img src="img/portfolio.jpg" alt="portfolio">
-            </a>  
-          </li>
-        </ul>
-      </section> -->
     </div>
     <footer class="main-footer">
       <a href="http://twitter.com/richardjboothe"><img src="../img/twitter2.png" alt="Twitter Logo" class="social-icon"></a>
