--- a/client/pages/toyProblems.html
+++ b/client/pages/toyProblems.html
@@ -17,10 +17,10 @@
       </a>
       <nav>
         <ul>
-          <li><a href="../index.html">Home</a></li>
-          <li><a href="./toyProblems.html" class="selected">Toy Problems</a></li>
-          <li><a href="./blog.html">Blog</a></li>
-          <li><a href="./portfolio.html">Portfolio</a></li>
+          <li><a href="/">Home</a></li>
+          <li><a href="toyProblems" class="selected">Toy Problems</a></li>
+          <li><a href="blog">Blog</a></li>
+          <li><a href="portfolio">Portfolio</a></li>
         </ul>
       </nav>
     </header>
