--- a/client/index.html
+++ b/client/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <title>Richard Boothe | Developer</title>
+    <link rel="icon" href="img/favicon.ico">
     <link rel="stylesheet" href="./style/normalize.css" />
     <link href='http://fonts.googleapis.com/css?family=Changa+One|Open+Sans:400italic,700italic,400,700,800' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" href="./style/main.css" />
